fixed spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -29,8 +29,8 @@
 .Footer {
   grid-area: footer;
   padding: 1rem;
-  margin-top: auto;
-  background: var(--gray-light);
+  margin-top: 2rem;
+  color: var(--gray);
 }
 
 .Logo {
